# Markio

./: .gitattributes  .gitignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
clipper-extension/: README.md  background.js  manifest.json  popup.html  popup.js
docs/: ARCHITECTURE.md  CHINA_APP_STORE_AI.md  MARKIO_DESIGN.md  PACKAGING.md  ROADMAP.md
mcp-server/: README.md  index.js  package-lock.json  package.json
scripts/: build-mas.sh  bump-version.mjs  dev.mjs  gen-perf-fixtures.mjs  make-icons.py  notarize.sh  package-macos-direct.sh  prep-preview-sidecar.mjs  release-check.mjs  upload-mas.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  PrivacyInfo.xcprivacy  build.rs  credentials.env.example  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/markio-preview/: Cargo.toml  README.md
src-tauri/crates/markio-preview/macos/: Info.plist  bundle.sh  embed-preview-app.sh  install-quickaction.sh
src-tauri/crates/markio-preview/macos/quickaction/Markio 预览.workflow/Contents/: Info.plist  document.wflow
src-tauri/crates/markio-preview/src/: main.rs  shell.css  shell.js
src-tauri/crates/markio-preview/windows/: installer-hooks.nsh  markio-preview.reg.template
src-tauri/crates/markio-render/: Cargo.toml
src-tauri/crates/markio-render/src/: lib.rs
src-tauri/entitlements/: macos.dev.entitlements  macos.entitlements  macos.inherit.entitlements  macos.mas.entitlements
src-tauri/examples/: rag_eval.rs
src-tauri/icons/: icon.icns
src-tauri/native/: storefront.m
src-tauri/src/: agent_cli.rs  ai.rs  aliyun_ops.rs  baidu_ops.rs  builtin_credentials.rs  clipper.rs  custom_themes.rs  dev_log.rs  dropbox_ops.rs  frontmatter.rs  fs_ops.rs  gdrive_ops.rs  git_ops.rs  html2md.rs  ignore.rs  import.rs  lib.rs  main.rs  markdown.rs  mcp.rs  oauth.rs  onedrive_ops.rs  p2p.rs  rss.rs  s3_ops.rs  secrets.rs  smart_channel.rs  state.rs  storefront.rs  synology_ops.rs  watcher.rs  webdav_ops.rs  window_state.rs
src-tauri/src/commands/: agent.rs  aliyun.rs  baidu.rs  clipper.rs  dropbox.rs  gdrive.rs  git.rs  history.rs  icloud.rs  import.rs  mcp.rs  mod.rs  onedrive.rs  p2p.rs  rag.rs  rss.rs  s3.rs  secret.rs  smart_channel.rs  synology.rs  theme.rs  webdav.rs
src-tauri/src/fs_ops/: backlinks.rs  links.rs  mod.rs  search.rs  snapshots.rs  templates.rs  tokens.rs  trash.rs  vault_index.rs  walker_io.rs
src-tauri/src/import/: apple_notes.rs  bear.rs  common.rs  evernote.rs  logseq.rs  mod.rs  notion.rs  obsidian.rs  roam.rs
src-tauri/src/rag/: chunk.rs  db.rs  embed.rs  graph.rs  index.rs  mod.rs  rerank.rs  search.rs
src-tauri/tests/: markdown_integration.rs
src/components/: ErrorBoundary.tsx  Welcome.tsx
src/components/editor/: BlockEditor.css  BlockEditor.tsx  BlockEditorMenus.tsx  EditorArea.tsx  SourceEditor.tsx  codeBlockSpec.test.ts  codeBlockSpec.ts  table-edit.test.ts  table-edit.ts  wysiwyg-image.test.ts  wysiwyg-table.integration.test.ts  wysiwyg-table.test.ts  wysiwyg.ts
src/components/layout/: AppShell.tsx  AttachmentSection.tsx  Crumb.tsx  ExportMenu.tsx  FileTree.tsx  NewMenu.tsx  Outline.test.ts  Outline.tsx  PropertyExplorer.tsx  RecentSection.tsx  Sidebar.tsx  SidebarResizer.tsx  StatusBar.tsx  TabStrip.tsx  TagLandscape.tsx  TaskInbox.tsx  TitleBar.tsx  TodayBar.tsx  Toolbar.tsx  ToolbarMenuPortal.tsx  TrashSection.tsx
src/components/popovers/: AIAssistantMessage.tsx  AIContextDrawer.tsx  AIPanel.tsx  AIPreview.tsx  AISidebar.tsx  AboutDialogs.tsx  AgentPanel.tsx  Autocomplete.tsx  BlockMenu.tsx  BubbleMenu.tsx  CommandPalette.tsx  ContextMenu.tsx  DiagPanel.tsx  DialogHost.tsx  ExportSheet.tsx  FilePropertiesDialog.tsx  FindBar.tsx  GlobalSearch.tsx  HistorySheet.tsx  IconPicker.tsx  MathPreview.tsx  MultiCopySheet.props.test.ts  MultiCopySheet.test.ts  MultiCopySheet.tsx  PinnedPlanBar.tsx  PomodoroChip.tsx  PulseSheet.tsx  QuickCapture.tsx  SlashMenu.tsx  TableContextMenu.tsx  TableToolbar.tsx  Toast.tsx  WeChatSheet.tsx  WritingGoalChip.tsx
src/components/preview/: CesiumView.tsx  GeoMapView.tsx  GlobeView.tsx  GraphView.tsx  KanbanView.tsx  ListView.tsx  Preview.tsx
src/components/settings/: AIModelPicker.tsx  Settings.tsx  (+2 more)
src/i18n/: en.json  index.ts  zh-CN.json
src/lib/: ai-agent.ts  ai-providers.test.ts  ai-providers.ts  ai-region-policy.test.ts  ai-region-policy.ts  aiCache.ts  aiModelsCache.test.ts  aiModelsCache.ts  api.ts  callouts.lazy.test.ts  callouts.ts  changelog.ts  charts.test.ts  charts.ts  clipboard.ts  code-blocks.ts  daily.ts  dataview.test.ts  dataview.ts  devLogger.ts  diagrams.test.ts  diagrams.ts  digestScheduler.ts  editor-bridge.test.ts  editor-bridge.ts  editor-context-menu.test.ts  editor-context-menu.ts  export.ts  findText.test.ts  findText.ts  fonts.ts  frontmatter.test.ts  frontmatter.ts  hoverPreview.test.ts  hoverPreview.ts  kanbanParse.test.ts  kanbanParse.ts  keyedTimers.ts  lineDiff.test.ts  lineDiff.ts  (+61 more)
src/stores/: aiSessions.test.ts  aiSessions.ts  customThemes.ts  diagnostics.regression.test.ts  diagnostics.test.ts  diagnostics.ts  dialog.test.ts  dialog.ts  fileIcons.ts  fileMeta.ts  network.ts  opsLog.ts  pinnedPlan.ts  pomodoro.ts  rag.ts  recents.test.ts  recents.ts  session.ts  settings.ts  streak.ts  sync.test.ts  sync.ts  tabs.ts  ui.test.ts  ui.ts  vaultIndex.ts  vaultTokens.ts  workspace.test.ts  workspace.ts  workspaceCleanup.ts
src/styles/: ai.css  app.css  main.css  markdown.css  performance.css  popovers.css  settings.css  sidebar.css  themes.css  wysiwyg.css
src/themes/: index.ts
src/types/: index.ts
store-assets/: app-store-metadata.md
store-assets/demo-vault/: 00 Welcome.md  AI Assistant.md  Publishing Checklist.md
tests/e2e/: markio-fixture.ts  markio-smoke.spec.ts  markio-visual.spec.ts
tests/rag-fixtures/: README.md  sample.json
(+63 files in other folders)
