[package]
name = "markio"
version = "0.1.0"
description = "A modern markdown reader"
authors = ["welape"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "markio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# markdown 引擎
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
# 代码高亮
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
    "html",
] }
# HTML 清洗 / 转义
ammonia = "4"

# 编码侦测
encoding_rs = "0.8"
encoding_rs_io = "0.1"

# AI 代理用，绕开 webview CSP
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# OS 钥匙串（mac Security / Windows Credential / Linux Secret Service）
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }

# 时间戳
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# 通用错误处理
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
