[workspace]
members = ["crates/markio-render", "crates/markio-preview"]

[package]
name = "markio"
version = "1.2.0"
description = "A modern markdown reader"
authors = ["welape"]
edition = "2021"
rust-version = "1.77"
default-run = "markio"

[lib]
name = "markio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# markdown 渲染核心（render / outline / metadata）已抽到独立 crate，
# 主 app 经 mod markdown 的 re-export 复用，pulldown-cmark / syntect / ammonia
# 全部下沉到该 crate，主包不再直接依赖它们。
markio-render = { path = "crates/markio-render" }

# 编码侦测
encoding_rs = "0.8"
encoding_rs_io = "0.1"

# AI 代理用，绕开 webview CSP
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "stream",
    "multipart",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util", "process"] }
futures-util = "0.3"
# OAuth PKCE 用的随机字节（Dropbox / Google Drive 授权流程）
getrandom = "0.2"
# OAuth 回调一次性 HTTP 监听器要解析 query string
url = "2"

# S3 兼容存储上传：minimal SigV4 签名 + reqwest PUT；不引入 rust-s3 全家桶
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# 文件系统监听（外部编辑器改动 → 自动重索引 + 刷文件树）
notify = "6"
notify-debouncer-mini = { version = "0.4", default-features = false }

# OS 钥匙串（mac Security / Windows Credential / Linux Secret Service）
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }

# 图片压缩（粘贴 / 拖拽上传前）
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "gif",
] }

# Notion / Bear / 印象 等导入：zip 解压 + xml 解析
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"

# 时间戳
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# 通用错误处理
thiserror = "1"
regex = "1"

# RAG 向量索引：sqlite + sqlite-vec 扩展 + FTS5
# bundled-full 启用 FTS5 / R*Tree / JSON 等内置模块
rusqlite = { version = "0.32", features = ["bundled-full", "blob"] }
sqlite-vec = "0.1"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"

# MCP server 出口：loopback HTTP server 给 mcp-server (Node) 转发 RPC
# WebClipper / SmartChannel 入站、P2P WS 金库 RPC 也复用 axum（ws feature 供 P2P）
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "ws"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }

# P2P 局域网发现：mDNS 广播 / 浏览 _markio._tcp
mdns-sd = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
