[package]
name = "markio-preview"
version = "1.1.3"
description = "Markio 超轻量 markdown 预览器：shell 启动、当前目录自动发现 + 前后切换，复用 markio-render 渲染核心"
authors = ["welape"]
edition = "2021"
rust-version = "1.77"
default-run = "markio-preview"

[[bin]]
name = "markio-preview"
path = "src/main.rs"

[dependencies]
# 窗口 / 事件循环 + webview（与主 app 经 Tauri 间接依赖同版本，零新增下载）
tao = "0.35"
wry = "0.55"
# 渲染核心
markio-render = { path = "../markio-render" }
# 代码高亮主题 CSS 生成（与 render 核心同 Spaced class style）
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
    "html",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 单实例检测：已有窗口时把新文件路径转发给它而非另起进程
single-instance = "0.3"
# macOS "用…打开" / 双击经 application:openURLs: 抵达，tao 以 Event::Opened(Vec<url::Url>) 暴露
url = "2"
