[package]
name = "markio-render"
version = "1.1.3"
description = "Markio 的 markdown → HTML 渲染核心（pulldown-cmark + syntect + ammonia），供主 app 与轻量预览器复用"
authors = ["welape"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "markio_render"

[dependencies]
# markdown 引擎
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
# 代码高亮
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
    "html",
] }
# HTML 清洗 / 转义
ammonia = "4"
# 本地图片内联为 data URI
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
